default/objects/SEPA_Toolkit__Validate_IBAN_Test__c/SEPA_Toolkit__Validate_IBAN_Test__c.object-meta.xml
<CustomObject>
    <description>Test object for testing the SEPA batch job</description>
    <label>Validate IBAN Test</label>
    <nameField>
        <displayFormat>IBAN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validate IBAN Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>