default/objects/SEPA_Toolkit__Validate_IBAN_Test__c/fields/SEPA_Toolkit__BIC__c.field-meta.xml
<CustomField>
    <fullName>SEPA_Toolkit__BIC__c</fullName>
    <label>BIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>