default/objects/SEPA_Toolkit__Validate_IBAN_Test__c/fields/SEPA_Toolkit__IBAN_FORMAT__c.field-meta.xml
<CustomField>
    <fullName>SEPA_Toolkit__IBAN_FORMAT__c</fullName>
    <label>IBAN format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>